Завершена форма и созданный роут Track

--- a/templates/base_operation.html.twig
+++ b/templates/base_operation.html.twig
@@ -4,7 +4,7 @@
          <!-- START card-->
          <div class="card card-flat">
             <div class="card-header text-center bg-dark"><a href="#">
-                    <img class="block-center rounded" src="{{ asset("sklad-express/img/logo.png")}}" alt="Image"></a></div>
+                    Logo </a></div>
             <div class="card-body">
                 {% block content %}{% endblock %}
             </div>
@@ -19,7 +19,6 @@
           </div>
           <div class="col-md-1 login-lang-wrap">
           <a href="/ru/post/login" class="login-lang">
-               <span  class="flag-icon flag-icon-ru "></span>
            </a>
           </div>
       </div>
