--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -3,7 +3,9 @@
 {% block title %}{{page_title|trans }}{% endblock %}
 
 {% block content %}
-        <div class="col-xl-6"></div>
+        <div class="col-xl-6">
+            <a href="{{ path('parcles_support') }}"> Support!</a>
+        </div>
         <div class="col-xl-6">
             <h4>{{ "Track the departure"| trans }}</h4>
             {% if page_id is defined
