--- a/templates/cabinet/profile/edit_form.html.twig
+++ b/templates/cabinet/profile/edit_form.html.twig
@@ -302,7 +302,7 @@
                 <div class="row py-4 justify-content-center">
                     <div class="col-2 col-sm-2">
                         <div class="form-group">
-                            {{ form_row(addressForm.save, {"label": "Save"|trans}) }}
+                            {{ form_row(addressForm.save, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans}) }}
                         </div>
                     </div>
                 </div>
