--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -37,7 +37,7 @@
 
                 <div class="form-group">
                     <div class="save-btn">
-                        {{ form_row(profileForm.save_avatar, {"label": "Save"|trans}) }}
+                        {{ form_row(profileForm.save_avatar, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans}) }}
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                         </div>
                         <div class="form-group">
                             <div class="save-btn">
-                                {{ form_row(profileForm.save, {"label": "Save"|trans}) }}
+                                {{ form_row(profileForm.save, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans}) }}
                             </div>
                         </div>
                     </div>
