--- a/templates/cabinet/addresses/editform.html.twig
+++ b/templates/cabinet/addresses/editform.html.twig
@@ -303,7 +303,7 @@
                 <div class="row py-sm-4 justify-content-center">
                     <div class="save-btn">
                         <div class="form-group">
-                            {{ form_row(addressForm.save, {"label": "Save"|trans}) }}
+                            {{ form_row(addressForm.save, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans}) }}
                         </div>
                     </div>
                 </div>
