--- a/templates/cabinet/addresses/modalAddress.html.twig
+++ b/templates/cabinet/addresses/modalAddress.html.twig
@@ -286,7 +286,7 @@
                                 <div class="row  justify-content-center d-none">
                                     <div class="col-2 col-sm-2">
                                         <div class="form-group">
-                                            {{ form_row(addressForm.save, {"label": "Save"|trans}) }}
+                                            {{ form_row(addressForm.save, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans}) }}
                                         </div>
                                     </div>
                                 </div>
