--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -3,6 +3,64 @@
 {% block title %}{{ "Dashboard"|trans }}{% endblock %}
 
 {% block content %}
+
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <a href="#" class="card-link-wrap">
+                    <div class="card flex-row align-items-center align-items-stretch border-0">
+                        <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left"><em class="fa-2x mr-2 fas fa-box-open"></em></div>
+                        <div class="col-8 py-3 bg-primary rounded-right">
+                            <div class="h2 mt-0">Добавить</div>
+                            <div class="text-uppercase">посылку</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <a href="#" class="card-link-wrap">
+                    <div class="card flex-row align-items-center align-items-stretch border-0">
+                    <div class="col-4 d-flex align-items-center bg-purple-dark justify-content-center rounded-left"><em class="icon-bubbles fa-3x"></em></div>
+                    <div class="col-8 py-3 bg-purple rounded-right">
+                        <div class="h2 mt-0">Обратится</div>
+                        <div class="text-uppercase">В поддержку</div>
+                    </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xl-6 col-lg-12 col-md-12">
+                <!-- START card-->
+                <div class="card col-12 align-items-center align-items-stretch border-0">
+                        
+                    <h4 class="mt-8">{{ "Track the departure"| trans }}</h4>
+                    
+                    {% if page_id is defined
+                        and
+                        page_id is not empty
+                        and
+                        page_id in ["post_find"] %}
+                    <div action="{{ path("post_find") }}" method="post">
+                        {% else %}
+                        <form action="{{ path("post_find") }}" method="post" target="_blank">
+                            {% endif %}
+                            <div class="form-group">
+                                <div class="input-group with-focus ">
+                                    <input class="form-control border-right-0 search-track-input" name="tracnum"
+                                        value="{% if trNum is defined %} {{ trNum }}{% endif %}"
+                                        required="required"
+                                    />
+                                    <div class="input-group-append">
+                                        <button type="submit" class="btn btn-outline-success search-track-btn">{{ "Track down"|trans }}</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                
+            </div>
+        </div>
+    </div>
+
     <div class="col-sm-6">
 
         <h4>{{ user.firstName }} {{ user.lastName }}</h4>
@@ -25,7 +83,7 @@
         {% endif %}
 
     </div>
-    <div class="col-sm-6">
+{#    <div class="col-sm-6">
 
         <h4>{{ "Track the departure"| trans }}</h4>
         
@@ -52,7 +110,8 @@
             </form>
         </div>
     </div>
-
+#}
+</div>
     <div class="row">
         <div class="col-xl-6">
             <div class="card card-default">
@@ -75,7 +134,7 @@
                             {% if ordersNew is not empty %}
                                 {% for order in ordersNew %}
                                     <tr class="text-center">
-                                        <td>
+                                        <td class="fixered-column">
                                             {{ order.trackingNumber }}
                                         </td>
                                         <td>{{ order.shippingCosts }}</td>
