--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -90,7 +90,7 @@
                                             {{ form_widget(form.addresses) }}
                                         {% endif %}
                                         <div class="input-group-append">
-                                            <a  id="addAddress" href="#" asss="{{ path("post_address_create") }}" {#target="_blank"#} class="btn btn-info btn-sm">{{ "Add Address" | trans }}
+                                            <a  id="addAddress" href="#" asss="{{ path("post_address_create") }}" {#target="_blank"#} class="btn btn-outline-info btn-sm">{{ "Add Address" | trans }}
                                             </a>
                                         </div>
                                         <div class="invalid-feedback">{{ form_errors(form.addresses) }}</div>
@@ -227,10 +227,10 @@
                         </div>
                         <div class="row">
                                  <div class="offset-4 col-md-2">
-                                       {{ form_widget(form.save) }}
+                                       {{ form_widget(form.save, {"attr": {"class": "btn btn-block btn-outline-primary mt-3 mx-auto d-block"},"label": "Save"|trans})  }}
                                 </div>
                                 <div class="col-md-2">
-                                    <a href="{{ path("post_parcels") }}" class="btn btn-secondary btn-block mt-3"> {{ "Cancel" | trans }}</a>
+                                    <a href="{{ path("post_parcels") }}" class="btn btn-outline-secondary btn-block mt-3"> {{ "Cancel" | trans }}</a>
                                 </div>
                         </div>
                     {{ form_end(form) }}
@@ -257,8 +257,8 @@
                      </div>
                  </div>
                  <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ "Close" | trans }}</button>
-                     <button type="button" id="saveaddress" class="btn btn-primary">{{ "Save changes" | trans }}</button>
+                     <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">{{ "Close" | trans }}</button>
+                     <button type="button" id="saveaddress" class="btn btn-outline-primary">{{ "Save changes" | trans }}</button>
                  </div>
              </div>
          </div>
@@ -278,7 +278,7 @@
     $(".product-list").collection({
         "allow_up": false,
         "allow_down": false,
-        "add": "<a href='#' class='btn btn-success btn-add-products'>{{ "Add product" | trans }}</a>",
+        "add": "<a href='#' class='btn btn-outline-success btn-add-products'>{{ "Add product" | trans }}</a>",
         "add_at_the_end": true
      });
 
