--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -3,6 +3,54 @@
 {% block title %}{{page_title|trans }}{% endblock %}
 
 {% block content %}
+
+
+                <div class="col-xl-4  col-md-12">
+                    <a href="{{ path("post_parcels_create") }}" class="card-link-wrap">
+                        <div class="card flex-row align-items-center align-items-stretch border-0">
+                            <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left"><em class="fa-2x mr-2 fas fa-box-open"></em></div>
+                            <div class="col-8 py-3 bg-primary rounded-right">
+                                <div class="h2 mt-0">Добавить</div>
+                                <div class="text-uppercase">посылку</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-xl-2  col-md-12">
+                    
+                </div>
+                <div class="col-xl-6 col-lg-12 col-md-12">
+                    <!-- START card-->
+                    <div class="card col-12 align-items-center align-items-stretch border-0">
+                            
+                        <h4 class="mt-8">{{ "Track the departure"| trans }}</h4>
+                        
+                        {% if page_id is defined
+                            and
+                            page_id is not empty
+                            and
+                            page_id in ["post_find"] %}
+                        <div action="{{ path("post_find") }}" method="post">
+                            {% else %}
+                            <form action="{{ path("post_find") }}" method="post" target="_blank">
+                                {% endif %}
+                                <div class="form-group">
+                                    <div class="input-group with-focus ">
+                                        <input class="form-control border-right-0 search-track-input" name="tracnum"
+                                            value="{% if trNum is defined %} {{ trNum }}{% endif %}"
+                                            required="required"
+                                        />
+                                        <div class="input-group-append">
+                                            <button type="submit" class="btn btn-outline-success search-track-btn">{{ "Track down"|trans }}</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    
+                </div>
+
+{#
         <div class="col-xl-6"></div>
         <div class="col-xl-6">
             <h4>{{ "Track the departure"| trans }}</h4>
@@ -22,112 +70,115 @@
                                    required="required"
                             />
                             <div class="input-group-append">
-                                <button type="submit" class="btn btn-success">{{ "Track down"|trans }}</button>
+                                <button type="submit" class="btn btn-outline-success">{{ "Track down"|trans }}</button>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-<div class="row">
-    <div class="col-12">
+#}
+<div class="col-12">
+    <div class="row">
+        <div class="col-12">
 
-    <!-- START card-->
-    <div class="card card-default">
-        <div class="card-header">
-            {% if page_title == 'Send Parcels List' %}
-            {% else %}
-                <a  href="{{ path("post_parcels_create") }}" class="float-left badge badge-primary">{{ "Add order" | trans }}</a>
-            {% endif %}
-        </div>
-        <div class="card-body">
-            <!-- START table-responsive-->
-            {% if totalItemCount %}
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover parcels-table">
-                        <thead>
-                        <tr class="text-center">
-                            <th  scope="col">{{ "Create Date" | trans }}</th>
-                            {% if isSend is defined and isSend == 1 %}
-                                <th scope="col">{{ "trackingNumber" | trans }}</th>
-                            {% else %}
-                                <th scope="col">{{ "trackingNumber Nova Pochta" | trans }}</th>
-                            {% endif %}
-                            <th scope="col">{{ "sendDetailWeight" | trans }}</th>
-                            <th scope="col">{{ "volumeWeigth" | trans }}</th>
-                            <th scope="col">{{ "shipgCost" | trans }}</th>
-                            <th scope="col">{{ "declareValue" | trans }}</th>
-                            <th scope="col">{{ "Adress" | trans }}</th>
-                            <th scope="col">{{ "Status" | trans }}</th>
-                            <th colspan="2" scope="col">{{ "Action" | trans }}</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% if items is defined and items is iterable %}
-                            {% for item in items %}
-                                <tr class="text-center">
-                                    <td>{{ item.getCreatedAtStr }}</td>
-                                    {% if isSend is defined and isSend == 1 %}
-                                        <td>{{ item.trNum }}</td>
-                                    {% else %}
-                                        <td>{{ item.trackingNumber }}</td>
-                                    {% endif %}
-                                    <td>{{ item.sendDetailWeight }}</td>
-                                    <td>{{ item.volumeWeigth }}</td>
-                                    <td>{{ item.shippingCosts }}</td>
-                                    <td>{{ item.declareValue }}</td>
-                                    <td>
-                                        {% if item.addresses.fullAddress is defined and item.addresses.fullAddress is not null %}
-                                            {{ item.addresses.fullAddress }}
+        <!-- START card-->
+        <div class="card card-default">
+            <div class="card-header">
+                {% if page_title == 'Send Parcels List' %}
+                {% else %}
+                    {#<a  href="{{ path("post_parcels_create") }}" class="float-left badge badge-primary">{{ "Add order" | trans }}</a>#}
+                {% endif %}
+            </div>
+            <div class="card-body">
+                <!-- START table-responsive-->
+                {% if totalItemCount %}
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover parcels-table">
+                            <thead>
+                            <tr class="text-center">
+                                <th  scope="col">{{ "Create Date" | trans }}</th>
+                                {% if isSend is defined and isSend == 1 %}
+                                    <th scope="col">{{ "trackingNumber" | trans }}</th>
+                                {% else %}
+                                    <th scope="col">{{ "trackingNumber Nova Pochta" | trans }}</th>
+                                {% endif %}
+                                <th scope="col">{{ "sendDetailWeight" | trans }}</th>
+                                <th scope="col">{{ "volumeWeigth" | trans }}</th>
+                                <th scope="col">{{ "shipgCost" | trans }}</th>
+                                <th scope="col">{{ "declareValue" | trans }}</th>
+                                <th scope="col">{{ "Adress" | trans }}</th>
+                                <th scope="col">{{ "Status" | trans }}</th>
+                                <th colspan="2" scope="col">{{ "Action" | trans }}</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% if items is defined and items is iterable %}
+                                {% for item in items %}
+                                    <tr class="text-center">
+                                        <td>{{ item.getCreatedAtStr }}</td>
+                                        {% if isSend is defined and isSend == 1 %}
+                                            <td>{{ item.trNum }}</td>
+                                        {% else %}
+                                            <td>{{ item.trackingNumber }}</td>
                                         {% endif %}
-                                    </td>
-                                    <td>{{ item.orderStatus }}</td>
-                                    {% if page_title != 'Send Parcels List' %}
+                                        <td>{{ item.sendDetailWeight }}</td>
+                                        <td>{{ item.volumeWeigth }}</td>
+                                        <td>{{ item.shippingCosts }}</td>
+                                        <td>{{ item.declareValue }}</td>
                                         <td>
-                                            {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
-                                                <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success btn-edit-parcel ">{{ "Edit Order" | trans }}</a>
-                                            {% endif %}
-                                            {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
-                                                {% if item.invoices is not empty %}
-                                                    {% for invoice in item.invoices if invoice.isPaid == false %}
-                                                        {% if invoice.price > 0 %}
-                                                            {% set liqPayForm=liqpay.LiqPayForm(invoice.price,'Pay by ExpreaaPochta.com',"EXPRESSINVOICE_"~invoice.id) %}
-                                                            <div class="liq-pay-button">
-                                                                {{ liqPayForm | raw }}
-                                                            </div>
-                                                            {% if invoice.comment is not empty %}
-                                                                <p>invoice.comment</p>
-                                                            {% endif %}
-                                                            <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
-                                                        {% endif %}
-
-                                                    {% endfor %}
-                                                {% endif %}
-
-                                            {% elseif page_title != 'Send Parcels List' %}
-                                                <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change disabled" value="{{ "Pay" | trans }}" />
+                                            {% if item.addresses.fullAddress is defined and item.addresses.fullAddress is not null %}
+                                                {{ item.addresses.fullAddress }}
                                             {% endif %}
                                         </td>
-                                    {% endif %}
+                                        <td>{{ item.orderStatus }}</td>
+                                        {% if page_title != 'Send Parcels List' %}
+                                            <td>
+                                                {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
+                                                    <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-outline-success btn-edit-parcel ">{{ "Edit Order" | trans }}</a>
+                                                {% endif %}
+                                                {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
+                                                    {% if item.invoices is not empty %}
+                                                        {% for invoice in item.invoices if invoice.isPaid == false %}
+                                                            {% if invoice.price > 0 %}
+                                                                {% set liqPayForm=liqpay.LiqPayForm(invoice.price,'Pay by ExpreaaPochta.com',"EXPRESSINVOICE_"~invoice.id) %}
+                                                                <div class="liq-pay-button">
+                                                                    {{ liqPayForm | raw }}
+                                                                </div>
+                                                                {% if invoice.comment is not empty %}
+                                                                    <p>invoice.comment</p>
+                                                                {% endif %}
+                                                                <input type="button" id="" class="payment-btn btn btn-outline-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
+                                                            {% endif %}
+
+                                                        {% endfor %}
+                                                    {% endif %}
+
+                                                {% elseif page_title != 'Send Parcels List' %}
+                                                    <input type="button" id="" class="payment-btn btn btn-outline-success liq-pay-button-change disabled" value="{{ "Pay" | trans }}" />
+                                                {% endif %}
+                                            </td>
+                                        {% endif %}
+                                    </tr>
+                                {% endfor %}
+                            {% else %}
+                                <tr>
+                                    <td colspan="3">{{ "No parcel" | trans}}</td>
                                 </tr>
-                            {% endfor %}
-                        {% else %}
-                            <tr>
-                                <td colspan="3">{{ "No parcel" | trans}}</td>
-                            </tr>
-                        {% endif %}
-                        </tbody>
-                    </table>
-                </div><!-- END table-responsive-->
-            {% else %}
-                {{ "No Parcels" | trans }}
-            {% endif %}
+                            {% endif %}
+                            </tbody>
+                        </table>
+                    </div><!-- END table-responsive-->
+                {% else %}
+                    {{ "No Parcels" | trans }}
+                {% endif %}
+            </div>
+            <div class="col-md-12">
+                {{ knp_pagination_render(items) }}
+            </div>
         </div>
-        <div class="col-md-12">
-            {{ knp_pagination_render(items) }}
+        <!-- END card-->
         </div>
-    </div>
-    <!-- END card-->
     </div>
 </div>
 {% endblock %}
