--- a/templates/system/product-order-theme.html.twig
+++ b/templates/system/product-order-theme.html.twig
@@ -1,5 +1,6 @@
 {% block OrderProductsFormType_row %}
-    <div class="col-md-12">
+
+    <div class="col-md-12 ">
         {#
             {{ form_label(form) }}
         #}
@@ -9,37 +10,27 @@
 {% endblock %}
 
 {% block OrderProductsFormType_widget %}
-        <div class="row align-items-end">
+        <!-- <div class="row align-items-end">
             <div class="col-3">
-                <div class="form-group">
-                    {{ form_label(form.descEn,"descEn"|trans, {"label_attr": {"class": "text-muted"}}) }}
-                </div>
+                
             </div>
             <div class="col-3">
-                <div class="form-group">
-                    {{ form_label(form.descUa,"descUa"|trans, {
-                        "label_attr": {"class": "text-muted"}
-                    }) }}
-                </div>
+                
             </div>
             <div class="col-2">
-                <div class="form-group">
-                    {{ form_label(form.price,"price"|trans, {
-                        "label_attr": {"class": "text-muted"}
-                    }) }}
-                </div>
+                
             </div>
             <div class="col-2">
-                <div class="form-group">
-                    {{ form_label(form.count,"count"|trans, {
-                        "label_attr": {"class": "text-muted"}
-                    }) }}
-                </div>
+                
             </div>
             <div class="col-2"></div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col-3">
+        </div> -->
+    <div class="row">
+        <div class="row align-items-center" style="width: 100%; min-width: 260px;">
+            <div class="col-6 col-md-3">
+                <div class="form-group">
+                    {{ form_label(form.descEn,"descEn"|trans, {"label_attr": {"class": "text-muted"}}) }}
+                </div>  
                 <div class="form-group">
                     <div class="input-group with-focus ">
                         {% if form.descEn.vars.errors|length %}
@@ -51,7 +42,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-6 col-md-3">
+                <div class="form-group">
+                    {{ form_label(form.descUa,"descUa"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                </div>
                 <div class="form-group">
                 <div class="input-group with-focus ">
                     {% if form.descUa.vars.errors|length %}
@@ -63,7 +59,12 @@
                 </div>
             </div>
         </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
+                <div class="form-group">
+                    {{ form_label(form.price,"price"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                </div>
                 <div class="form-group">
                     <div class="input-group with-focus ">
                         {% if form.price.vars.errors|length %}
@@ -75,7 +76,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
+                <div class="form-group">
+                    {{ form_label(form.count,"count"|trans, {
+                        "label_attr": {"class": "text-muted"}
+                    }) }}
+                </div>
                 <div class="form-group">
                     <div class="input-group with-focus ">
                         {% if form.price.vars.errors|length %}
@@ -87,12 +93,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
+                    <div class="form-group" style="opacity: 0;">
+                        <label class="text-muted" for="order_form_products_0_count">
+                            удалить
+                        </label>
+                    </div>
                     <div class="form-group">
-                        <a href="#" class="collection-remove btn btn-danger">{{ "Remove product" | trans }}</a>
+                        <a href="#" class="collection-remove btn btn-outline-danger">{{ "Remove product" | trans }}</a>
                         <a href="#" class="collection-add btn">{{ "Add product" | trans }}</a>
                     </div>
                 </div>
         </div>
+    </div>
         {{ form_widget(form) }}
 {% endblock %}
