--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -7,7 +7,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-xl-3 col-md-6">
-                <a href="#" class="card-link-wrap">
+                <a href="{{ path("post_parcels_create") }}" class="card-link-wrap">
                     <div class="card flex-row align-items-center align-items-stretch border-0">
                         <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left"><em class="fa-2x mr-2 fas fa-box-open"></em></div>
                         <div class="col-8 py-3 bg-primary rounded-right">
@@ -18,11 +18,12 @@
                 </a>
             </div>
             <div class="col-xl-3 col-md-6">
-                <a href="#" class="card-link-wrap">
+                <a href="{{ path('parcles_support') }}" class="card-link-wrap">
                     <div class="card flex-row align-items-center align-items-stretch border-0">
                     <div class="col-4 d-flex align-items-center bg-purple-dark justify-content-center rounded-left"><em class="icon-bubbles fa-3x"></em></div>
+
                     <div class="col-8 py-3 bg-purple rounded-right">
-                        <div class="h2 mt-0">Обратится</div>
+                            <div class="h2 mt-0">Обратится</div>
                         <div class="text-uppercase">В поддержку</div>
                     </div>
                     </div>
