--- a/templates/base_operation.html.twig
+++ b/templates/base_operation.html.twig
@@ -17,11 +17,11 @@
                <span  class="flag-icon flag-icon-ua "></span>
            </a>
           </div>
-          <div class="col-md-1 login-lang-wrap">
-          <a href="/ru/post/login" class="login-lang">
-               <span  class="flag-icon flag-icon-ru "></span>
-           </a>
-          </div>
+{#          <div class="col-md-1 login-lang-wrap">#}
+{#          <a href="/ru/post/login" class="login-lang">#}
+{#               <span  class="flag-icon flag-icon-ru "></span>#}
+{#           </a>#}
+{#          </div>#}
       </div>
 
          <div class="p-3 text-center bottom-fix">
