--- a/templates/cabinet/support/support_form.html.twig
+++ b/templates/cabinet/support/support_form.html.twig
@@ -73,29 +73,7 @@
                 <div class="row py-4 justify-content-center">
                     <div class="col-8 col-sm-8">
                         <div class="form-group">
-                            {{ form_label(SupportForm.Subject,"Subject"|trans, {
-                                "label_attr": {"class": "text-muted"}
-                            }) }}
-                            <div class="input-group with-focus">
-                                {% if SupportForm.Subject.vars.errors|length %}
-                                    {{ form_widget(SupportForm.Subject, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                {% else %}
-                                    {{ form_widget(SupportForm.Subject) }}
-                                {% endif %}
-                                <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                </div>
-                                <div class="invalid-feedback">{{ form_errors(SupportForm.Name) }}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row py-4 justify-content-center">
-                    <div class="col-8 col-sm-8">
-                        <div class="form-group">
-                            {{ form_label(SupportForm.Subject,"Message"|trans, {
+                            {{ form_label(SupportForm.Message,"Message"|trans, {
                                 "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
@@ -117,7 +95,7 @@
                 <div class="row py-4 justify-content-center">
                     <div class="col-2 col-sm-2">
                         <div class="form-group">
-                            {{ form_row(SupportForm.submit, {"label": "Save"|trans}) }}
+                            {{ form_row(SupportForm.submit, {"label": "Send"|trans}) }}
                         </div>
                     </div>
                 </div>
