--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -10,8 +10,8 @@
                         <div class="card flex-row align-items-center align-items-stretch border-0">
                             <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left"><em class="fa-2x mr-2 fas fa-box-open"></em></div>
                             <div class="col-8 py-3 bg-primary rounded-right">
-                                <div class="h2 mt-0">Добавить</div>
-                                <div class="text-uppercase">посылку</div>
+                                <div class="h2 mt-0">{{ "Add"|trans}}</div>
+                                <div class="text-uppercase">{{ "Percles"|trans}}</div>
                             </div>
                         </div>
                     </a>
@@ -24,7 +24,7 @@
                     <div class="card col-12 align-items-center align-items-stretch border-0">
                             
                         <h4 class="mt-8">{{ "Track the departure"| trans }}</h4>
-                        
+
                         {% if page_id is defined
                             and
                             page_id is not empty
@@ -36,7 +36,7 @@
                                 {% endif %}
                                 <div class="form-group">
                                     <div class="input-group with-focus ">
-                                        <input class="form-control border-right-0 search-track-input" name="tracnum"
+                                        <input class="form-control border-right-0 search-track-input number_only" name="tracnum"
                                             value="{% if trNum is defined %} {{ trNum }}{% endif %}"
                                             required="required"
                                         />
