--- a/templates/cabinet/sidebar.html.twig
+++ b/templates/cabinet/sidebar.html.twig
@@ -2,7 +2,7 @@
     <!-- START Top Navbar-->
     <nav class="navbar topnavbar">
         <!-- START navbar header-->
-        <div class="navbar-header"><a class="navbar-brand" href="#/">
+        <div class="navbar-header"><a class="navbar-brand" href="{{ path("post_dashboard") }}">
                 <div class="brand-logo"><img class="img-fluid" src="{{ asset("img/logo.png") }}" alt="App Logo"></div>
 {#                <div class="brand-logo-collapsed"><img class="img-fluid" src="img/logo-single.png" alt="App Logo"></div>#}
             </a></div><!-- END navbar header-->
