--- a/templates/base_operation.html.twig
+++ b/templates/base_operation.html.twig
@@ -14,7 +14,8 @@
          <div class="row justify-content-center mt-2">
           <div class="col-md-1 login-lang-wrap">
            <a href="/post/login" class="login-lang">
-               <span  class="flag-icon flag-icon-ua "></span>
+{#               <span  class="flag-icon flag-icon-ua "></span>#}
+               <img src="/sklad-express/img/flag.jpg"  style="width:100%" alt="flag">
            </a>
           </div>
           <div class="col-md-2 login-lang-wrap">
