--- a/public/sklad-express/css/app.css
+++ b/public/sklad-express/css/app.css
@@ -5013,4 +5013,91 @@ body .jvectormap-zoomout {
     color: #f05050 !important; }
 
 
+.button {
+  width: 300px;
+  height: 60px;
+  margin: 0 auto;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 3px;
+  background-color: #ff5252;
+  text-align: center;
+  cursor: pointer;
+}
+
+.button span {
+  line-height: 60px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .8);
+  display: none;
+}
+
+.popup {
+  border-radius: 5px;
+  text-align: center;
+  position: absolute;
+  width: 400px;
+  left: 50%;
+  top: 32%;
+  transform: translate(-50%, -50%);
+  padding: 0px;
+  box-sizing: border-box;
+  background-color: #45c2e8;
+  color: #fff;
+  padding-bottom: 10px;
+}
+
+.close-popup {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  width: 21px;
+  height: 23px;
+  cursor: pointer;
+}
+
+.close-popup:before {
+  content: '';
+  background-color: #fff;
+  position: absolute;
+  height: 1px;
+  width: 20px;
+  top: 11px;
+  left: -4px;
+  transform: rotate(-45deg);
+}
+.close-popup:after {
+  content: '';
+  background-color: #fff;
+  position: absolute;
+  height: 1px;
+  width: 20px;
+  top: 11px;
+  transform: rotate(45deg);
+  left: -4px;
+}
+
+@media screen and (max-width: 768px) {
+
+  .popup {
+    width: 100%;
+    height: 100vh;
+    font-size: 15px;
+  }
+}
+
+
 
