--- a/templates/cabinet/support/support_form.html.twig
+++ b/templates/cabinet/support/support_form.html.twig
@@ -111,7 +111,7 @@
         {#  FINISH FORM #}
     </div>
 {#    modal window#}
-    <div class="overlay js-overlay-campaign">
+    <div class="overlay js-overlay-campaign" id="modal_window1">
         <div class="popup js-popup-campaign">
             <h3 style=" margin: 10px;margin-bottom: -4px;">Спасибо за ваше обращение</h3><br>
             Мы свяжемся с вами в ближайшее время.
