--- a/public/sklad-express/css/app.css
+++ b/public/sklad-express/css/app.css
@@ -5035,7 +5035,7 @@ body .jvectormap-zoomout {
   text-transform: uppercase;
 }
 
-.overlay {
+ #modal_window1.overlay {
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -5045,7 +5045,7 @@ body .jvectormap-zoomout {
   display: none;
 }
 
-.popup {
+#modal_window1 .popup {
   border-radius: 5px;
   text-align: center;
   position: absolute;
@@ -5060,7 +5060,7 @@ body .jvectormap-zoomout {
   padding-bottom: 10px;
 }
 
-.close-popup {
+#modal_window1 .close-popup {
   position: absolute;
   top: 3px;
   right: 3px;
@@ -5069,7 +5069,7 @@ body .jvectormap-zoomout {
   cursor: pointer;
 }
 
-.close-popup:before {
+#modal_window1 .close-popup:before {
   content: '';
   background-color: #fff;
   position: absolute;
@@ -5079,7 +5079,7 @@ body .jvectormap-zoomout {
   left: -4px;
   transform: rotate(-45deg);
 }
-.close-popup:after {
+#modal_window1 .close-popup:after {
   content: '';
   background-color: #fff;
   position: absolute;
@@ -5092,7 +5092,7 @@ body .jvectormap-zoomout {
 
 @media screen and (max-width: 768px) {
 
-  .popup {
+  #modal_window1 .popup {
     width: 100%;
     height: 100vh;
     font-size: 15px;
