--- a/templates/base_operation.html.twig
+++ b/templates/base_operation.html.twig
@@ -26,11 +26,10 @@
       </div>
 
          <div class="p-3 text-center bottom-fix">
-             <span class="mr-2">&copy;</span><span>2019</span>
+             <span class="mr-2">&copy;</span><span>Expressposhta 2019.All Rights Reserved</span>
              {# <span class="mr-2">-</span><span>{{"Footer brand"|trans}}</span><br> #}
-             <span class="mr-2">-</span><span>Expressposhta</span><br>
              {# <span>{{"Footer text"|trans}}</span> #}
-             <span>Expressposhta</span>
+
          </div>
    </div>
  {% endblock %}
