--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -126,7 +126,7 @@
                                         {% endif %}
                                         <td>{{ item.sendDetailWeight }}</td>
                                         <td>{{ item.volumeWeigth }}</td>
-                                        <td>{{ item.shippingCosts }}</td>
+                                        <td class="font-weight-bold">{{ item.shippingCosts }}</td>
                                         <td>{{ item.declareValue }}</td>
                                         <td>
                                             {% if item.addresses.fullAddress is defined and item.addresses.fullAddress is not null %}
