--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -1,7 +1,7 @@
 <!-- START Right Navbar-->
 <ul class="navbar-nav flex-row">
     <!-- Search icon-->
-    <li class="nav-item"><a class="nav-link center-icon" href="#" data-search-open=""><em class="icon-magnifier"></em></a></li><!-- Fullscreen (only desktops)-->
+{#    <li class="nav-item"><a class="nav-link center-icon" href="#" data-search-open=""><em class="icon-magnifier"></em></a></li><!-- Fullscreen (only desktops)-->#}
     <li class="lang-select-wrap">
         <select id="select_language" class="form-control select select_language selectpicker lang-select">
             <option {% if app.request.locale == 'ua' %}selected{% endif %} value="">
