--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,7 @@
             <script src="{{ asset("sklad-express/js/parsleyi18n/ua.js") }}"></script>
         {% endif %}
         <script src="{{ asset("sklad-express/js/app.js") }}"></script>
-        <script src="{{ asset("sklad-express/js/custom.js?ver=1.223344") }}"></script>
+        <script src="{{ asset("sklad-express/js/custom.js?ver=1.2233445") }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
